# aremi-tmy

./: .gitignore  CHANGELOG.md  README.md  aremi-observations-tmy.cabal  aremi-tmy.cabal  make_package  stack.yaml  test.csv
sandia/: README.md  tmy-avg.json  tmy-config-0.2.0.0.json  tmy-config-filtered.json  tmy-config-halfhourly.json  tmy-config.json  tmy-csv-cut.sh  tmy.py  validate_data.py
sandia/test/: SolarStationsExistingExpected.csv  SolarStationsTmy_existing_expected.csv  SolarStationsTmy_orig.csv  little_melbourne.csv  little_melbourne_dup_timestamps.csv  little_melbourne_has_gaps.csv  little_melbourne_has_nans.csv  little_melbourne_no_monotonic.csv  little_melbourne_ts_off_hour.csv  melbourne_tmy.csv  months_merge.csv  months_merge_out_tmy_expected.csv  sufficient_data_01.csv  sufficient_data_02.csv  sufficient_data_03.csv  test_tmy.py  tmy-config2.json
solar_data/: pom.xml
solar_data/src/main/java/: ActualWD.java  ActualWDBrief.java  AveragedReading.java  AveragedWD.java  ChangeYear.java  CombinedData.java  FillGaps.java  FillGapsSolar.java  FillGapsWeather.java  Main.java  Reading.java  SolarData.java  SolarVar.java  Value.java  WeatherData.java  WeatherVar.java
solar_data/src/test/java/: FillGapsTest.java  FillGapsWeatherTest.java  SolarDataTest.java  WeatherDataTest.java
src/: Main.hs  ObsTmy.hs
src/ObsTmy/: Import.hs
src/Tmy/: Common.hs  Csv.hs  Import.hs  OneMinSolarTypes.hs
src/Tmy/OneMinSolar/: FillAdjacent.hs  FillInterp.hs  Functions.hs  Main.hs  MainAllStations.hs  TimeZones.hs  Types.hs
