name:                aremi-observations-tmy
version:             0.1.0.0
synopsis:            AREMI TMY from weather observations and satellite irradiance
description:         A tool to work out Typical Meteorological Year (TMY) from ground weather station observations together with satellite solar irradiance data.
homepage:            https://github.com/NICTA/aremi-observations-tmy
license:             Apache-2.0
license-file:        LICENSE
author:              Mats Henrikson
maintainer:          mats.henrikson@nicta.com.au
copyright:           NICTA 2015
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ObsTmy
  build-depends:       base >= 4.7 && < 4.9
  default-language:    Haskell2010

executable aremi-observations-tmy-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aremi-observations-tmy
  default-language:    Haskell2010

test-suite aremi-observations-tmy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aremi-observations-tmy
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NICTA/aremi-observations-tmy
