name:                aremi-tmy
version:             0.1.0.0
synopsis:            AREMI TMY from weather observations and satellite irradiance
description:         A tool to work out Typical Meteorological Year (TMY) from ground weather station observations and satellite solar irradiance data.
homepage:            https://github.com/NICTA/aremi-tmy
license:             Apache-2.0
license-file:        LICENSE
author:              Mats Henrikson
maintainer:          mats.henrikson@nicta.com.au
copyright:           NICTA 2015
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable aremi-tmy
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , cassava
                     , filemanip
                     , text
                     , vector
  default-language:    Haskell2010

test-suite aremi-tmy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NICTA/aremi-tmy
