name:                aremi-tmy
version:             0.1.1.0
synopsis:            AREMI TMY from weather observations and satellite irradiance
description:         A tool to work out Typical Meteorological Year (TMY) from ground weather station observations and satellite solar irradiance data.
homepage:            https://github.com/NICTA/aremi-tmy
license:             Apache-2.0
license-file:        LICENSE
author:              Mats Henrikson, Alex Mason, David Cole
maintainer:          mats.henrikson@nicta.com.au
copyright:           NICTA 2015
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.20

executable aremi-tmy-oneMinSolar
  hs-source-dirs:      src
  main-is:             Tmy/OneMinSolar/Main.hs
  other-modules:       Tmy.Common
                     , Tmy.Csv
                     , Tmy.OneMinSolar.Functions
                     , Tmy.OneMinSolar.Types
                     , Tmy.OneMinSolar.FillInterp
                     , Tmy.OneMinSolar.FillAdjacent
                     , Tmy.OneMinSolar.TimeZones
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , async
                     , bytestring
                     , cassava
                     , containers
                     , directory
                     , filemanip
                     , lens
                     , lens-datetime
                     , old-locale
                     , old-time
                     , semigroups
                     , text
                     , time
                     , time-locale-compat
                     , vector
                     , unordered-containers
  default-language:    Haskell2010

executable aremi-tmy-all-stations
  hs-source-dirs:      src
  main-is:             Tmy/OneMinSolar/MainAllStations.hs
  other-modules:       Tmy.Common
                     , Tmy.Csv
                     , Tmy.OneMinSolar.Functions
                     , Tmy.OneMinSolar.Types
                     , Tmy.OneMinSolar.FillInterp
                     , Tmy.OneMinSolar.FillAdjacent
                     , Tmy.OneMinSolar.TimeZones
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , async
                     , bytestring
                     , cassava
                     , containers
                     , directory
                     , filemanip
                     , lens
                     , lens-datetime
                     , old-locale
                     , old-time
                     , semigroups
                     , text
                     , time
                     , time-locale-compat
                     , vector
                     , unordered-containers
                     , async
                     , pipes-csv
                     , pipes
                     , pipes-safe
                     , pipes-bytestring
                     , foldl
  default-language:    Haskell2010

test-suite aremi-tmy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/NICTA/aremi-tmy
